--- a/app/views/layouts/global/_login_controls.html.erb
+++ b/app/views/layouts/global/_login_controls.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="row">								
           <label for="lbl02" class="text-password"><%= I18n.t('muck.users.password') %></label>
-          <%= f.password_field :login, :id => "lbl02", :class =>"text" %>
+          <%= f.password_field :password, :id => "lbl02", :class =>"text" %>
         </div>
       </fieldset>
     <% end -%>
