--- a/app/views/characters/_link_twitter.html.erb
+++ b/app/views/characters/_link_twitter.html.erb
@@ -2,12 +2,19 @@
   <% if @character.authentication -%>
     <div>
       <p>
-        <%= translate('general.connected_to_twitter_msg', :twitter_link => link_to(@character.authentication.nickname, "http://www.twitter.com/#{@character.authentication.nickname}", :target => '_blank')) %>
+        <%= translate('general.connected_to_twitter_msg') %> <%= link_to(@character.authentication.nickname, "http://www.twitter.com/#{@character.authentication.nickname}", :target => '_blank') %>
       </p>
       <% if @can_edit_project -%>
         <p>(All tweets for <%= @character.name %> will be sent to this account).</p>
-        <%= link_to translate('general.delete'), authentication_path(@character.authentication), :confirm => translate('general.delete_confirmation'), :method => :delete %>
-        <p><%=translate('items.untweeted_count_msg', :untweeted_items_count => @untweeted_items_count)%></p>
+        <%= button_to translate('general.delete_twitter_connection'), authentication_path(@character.authentication), :confirm => translate('general.delete_confirmation'), :method => :delete %>
+        <% if @untweeted_items_count > 0 -%>
+          <p><%=translate('items.untweeted_count_msg', :untweeted_items_count => @untweeted_items_count)%></p>
+          <%= muck_form_for @character, :url => project_character_path(@project, @character), :html => { :id => "send-tweets-character-form", :name => 'edit-character-form' } do |f| -%>
+          	<div class="button form-row">
+            	<%= f.submit translate('general.send_tweets') %>
+            </div>
+          <% end -%>
+        <% end -%>
       <% end -%>
     </div>
   <% elsif @can_edit_project -%>
