pulling out old solr config

--- a/app/views/default/search.html.erb
+++ b/app/views/default/search.html.erb
@@ -1,74 +1,7 @@
-<h2>Search Results <span><strong>showing 1-5</strong> of 8</span></h2> 
-<div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-sinking3">Sinking of the Titanik</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> TwHIstory Team</span> 
-	<span class="next-broadcast"><strong>Next Broadcast:</strong> April 9, 2011</span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
-<div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-battle">The Battle of Gettysburg</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> Michael Quinn</span> 
-	<span class="next-broadcast"><strong>Next Broadcast:</strong><em> currently running</em></span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
-<div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-cuban">The Cuban Missle Crisis</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> Mrs. Knox’s 10th-grade HIstory Class</span> 
-	<span class="next-broadcast"><strong>Next Broadcast:</strong><em> none scheduled</em></span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
-<div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-sinking3">Sinking of the Titanik</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> TwHIstory Team</span> 
-	<span class="next-broadcast"><strong>Next Broadcast:</strong> April 9, 2011</span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
-<div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-battle">The Battle of Gettysburg</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> Michael Quinn</span> 
-	<span class="next-broadcast"><strong>Next Broadcast:</strong> <em>currently running</em></span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
-<div class="paging"> 
-	<ul>							<li><a href="#" class="prev">prev</a></li>							<li><a href="#" class="next">next</a></li>						</ul> 
-</div>
+<h2>Search Results <span><%= paging_information(@projects, @total_count).html_safe if @projects.any? %></span></h2>
+<% if @projects.any? -%>
+  <%= render :search_result, @projects %>
+<% else -%>
+  <%=translate('general.no_search_results') %>
+<% end -%>
+<%= will_paginate @projects%>
