--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -1,6 +1,13 @@
 <div id="footer"> 
 	<ul id="nav"> 
-		<li><a href="#">Home</a></li>			<li><a href="#">ReEnactments</a></li>			<li><a href="#">Broadcast Schedule</a></li>			<li><a href="#">In the News</a></li>			<li><a href="#">About</a></li>			<li><a href="#">Contact</a></li>		</ul><!-- nav --> 
-	<p>&copy; copyleft Twhistory Online Licensed under Creative Commons BYNCSA : feel free to use, adapt and share, but always share alike</p> 
+		<li><a href="/">Home</a></li>
+		<li><a href="/projects">ReEnactments</a></li>
+		<li><a href="/broadcasts">Broadcast Schedule</a></li>
+		<li><a href="/blog">In the News</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/contact">Contact</a></li>
+	</ul>
+	<p>&copy; copyleft TwHistory Online Licensed under Creative Commons BYNCSA : feel free to use, adapt and share, but always share alike</p> 
+	<p>TwHistory was funded by a generous grant from <a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">Talis</a></p>
 </div>
 <%= output_flash(:class => "notify-box") %>
