--- a/app/views/default/_search_result.html.erb
+++ b/app/views/default/_search_result.html.erb
@@ -5,10 +5,10 @@
 			<li><a href="#" class="comments">comments</a></li> 
 			<li><a href="#" class="people">people</a></li> 
 			<li><a href="#" class="doc">doc</a></li> 
-		</ul><!-- options list --> 
-		<h3 class="text-sinking3">Sinking of the Titanik</h3><!-- text sinking --> 
-	</div><!-- heading --> 
-	<span class="author"><strong>Recreated by:</strong> TwHIstory Team</span> 
+		</ul>
+		<h3 class="text-sinking3"><%= link_to search_result.title, search_result %></h3>
+	</div>
+	<span class="author"><strong>Recreated by:</strong> <%= search_result.user.display_name %></span> 
 	<span class="next-broadcast"><strong>Next Broadcast:</strong> April 9, 2011</span> 
-	<p>Ladies and gentlemen. The Titanic will sail again…and then it will sink again! We are presenting TwHistory at two conferences this week (TTIX and GLS). We will explain how a TwHistory event can be coordinated, and then we will demonstrate it by asking participants to create tweets around the sinking of the Titanic. If you would like to be updated on this event, please follow @TwHistory. This event will happen June 10th, 2010. Hope to see you there!</p> 
-</div><!-- result box --> 
+	<p><%= search_result.description %></p> 
+</div>
