updated contact link

--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -5,7 +5,7 @@
 		<li><a href="/broadcasts">Broadcast Schedule</a></li>
 		<li><a href="/blog">In the News</a></li>
 		<li><a href="/about">About</a></li>
-		<li><a href="/contact">Contact</a></li>
+		<li><a href="http://twhistory.org/stay-in-touch/">Contact</a></li>
 	</ul>
 	<p>&copy; copyleft TwHistory Online Licensed under Creative Commons BYNCSA : feel free to use, adapt and share, but always share alike</p> 
 	<p>TwHistory was funded by a generous grant from <a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">Talis</a></p>
