--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -192,6 +192,7 @@ a:hover{text-decoration:none;}
 /* wrapper end */
 /* footer start */
 #footer{padding:16px 0;width:970px;margin:0 auto;text-align:center;}
+#footer a{color:#4B3013;}
 #nav{padding-bottom:4px;}
 #nav li{line-height:18px;padding:0 9px;display:inline;font-size:16px;font-weight:bold;}
 #nav li a{text-decoration:none;color:#fff;}
