--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -7,185 +7,49 @@
 <% else -%>
   No current broadcasts
 <% end -%>
-<h4>Upcoming Re-enactments</h4> 
-<div class="enactments"> 
-	<div class="heading"> 
-		<a href="#" class="btn-prev">Past</a> 
-		<a href="#" class="btn-next">Next</a> 
-		<strong class="mounth">SEPTEMBER - OCTOBER</strong> 
-	</div><!-- heading vlock --> 
-	<table> 
-		<tr> 
-			<td class="first"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">19</a> 
-				</div><!-- table holder --> 
-			</td>								<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">20</a> 
-				</div> 
-			</td>								<td class="has-event"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">21</a>										
-					<div class="event gettysburg">											
-					  <a href="#" class="name">Gettysburg</a><!-- ned -->											
-					  <div class="arrow">												
-					    <span class="start">start</span><!-- start -->												
-					    <span class="end">end</span><!-- end -->											
-					  </div><!-- arrow -->										
-					</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td>								<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">22</a> 
-				</div><!-- table holder --> 
-			</td>								<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">23</a> 
-				</div><!-- table holder --> 
-			</td>								<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">24</a> 
-				</div><!-- table holder --> 
-			</td>								<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">25</a> 
-				</div><!-- table holder --> 
-			</td> 
-		</tr> 
-		<tr> 
-			<td class="first"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">26</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">27</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td class="has-event2"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">28</a>										<div class="event">											<a href="#" class="name">1947 Mormon Pioneer Trek</a><!-- ned -->											<div class="arrow">												<span class="start">start</span><!-- start -->												<span class="end">end</span><!-- end -->											</div><!-- arrow -->										</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td> 
-			<td class="has-event"> 
-				<div  class="table-holder"> 
-					<a href="#" class="date">29</a>										<div class="event second">											<a href="#" class="name">Cuban MIssle Crisis</a><!-- ned -->											<div class="arrow">												<span class="start">start</span><!-- start -->												<span class="end">end</span><!-- end -->											</div><!-- arrow -->										</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">30</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">1</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">2</a> 
-				</div><!-- table holder --> 
-			</td> 
-		</tr> 
-		<tr> 
-			<td class="first has-event2"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">3</a>										<div class="event">											<div class="arrow">											</div><!-- arrow -->										</div><!-- event block -->										<div class="event cuban second">											<div class="arrow">												<span class="start">start</span><!-- start -->											</div><!-- arrow -->										</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td> 
-			<td class="has-event"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">4</a> 
-					<div class="event third titanik"> 
-						<a href="#" class="name">Titanik</a><!-- ned --> 
-						<div class="arrow"> 
-							<span class="start">start</span><!-- start --> 
-							<span class="end">end</span><!-- end --> 
-						</div><!-- arrow --> 
-					</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">5</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">6</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">7</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">8</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">9</a> 
-				</div><!-- table holder --> 
-			</td> 
-		</tr> 
-		<tr> 
-			<td class="first has-event"> 
-				<div class="table-holder"> 
-					<a href="#" class="date">10</a>										<div class="event">											<div class="arrow"> 
-							<span class="next-mounth">Jul 24, 2011 </span> 
-							<span class="start">start</span><!-- start -->											</div><!-- arrow -->										</div><!-- event block --> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">11</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">12</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">13</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">14</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">15</a> 
-				</div><!-- table holder --> 
-			</td> 
-			<td> 
-				<div class="table-holder"> 
-					<a href="#" class="date">16</a> 
-				</div><!-- table holder --> 
-			</td> 
-		</tr> 
-	</table> 
-</div><!-- enactments block --> 
-<h4>Unscheduled Re-enactments</h4> 
-<ul class="links-list"> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>First Flight - Kittyhawk</strong> by Todd Bartlett</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Simone Bolivar-Haiti Liberation</strong> by Miss Mitchell’s 8th-grade World History</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Columbus 1492</strong> by GEO208 Utah Valley University</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Battle of the Bulge</strong> by Maryanne Hanks</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Paul Revere’s Ride</strong> by Daughters of the American Revolution - Seattle</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Columbia Shuttle Disaster</strong> by Todd Bartlett</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Alexander the Great’s March on Moscow</strong> by Twhistory</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Flight of the Enola Gay</strong> by Locke HS History Club</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Something Else</strong> by Twhistory</span></li> 
-	<li><a href="#" class="request">request a broadcast</a><span><strong>Running Out of Ideas</strong> by Todd Bartlett</span></li> 
-</ul><!-- links list --> 
+<h4>Scheduled Re-enactments</h4> 
+<div id="calendar"></div>
 
+<script type="text/javascript" language="JavaScript">
+  jQuery(document).ready(function(){
+  	var date = new Date();
+  	var d = date.getDate();
+  	var m = date.getMonth();
+  	var y = date.getFullYear();
+	
+  	jQuery('#calendar').fullCalendar({
+  		header: {
+  			left: 'prev',
+  			center: 'title',
+  			right: 'next'
+  		},
+  		buttonText: {
+          	prev: '&nbsp;',
+          	next: '&nbsp;'
+  	    },
+  		editable: false,
+  		events: [
+  			{
+  				title: 'Gettysburg',
+  				start: new Date(y, m-1, 28),
+  				end: new Date(y, m, 2)
+  			},
+  			{
+  				title: '1947 Mormon Pioneer Trek',
+  				start: new Date(y, m, 5),
+  				end: new Date(y, m, 30)
+  			},
+  			{
+  				title: 'Cuban Misile Crisis',
+  				start: new Date(y, m, 6),
+  				end: new Date(y, m, 13)
+  			},
+  			{
+  				title: 'Titanik',
+  				start: new Date(y, m, 11),
+  				end: new Date(y, m, 12)
+  			},
+  		]
+  	});	
+  });
+</script>
