--- a/app/views/layouts/global/_head.html.erb
+++ b/app/views/layouts/global/_head.html.erb
@@ -15,7 +15,7 @@
   <%= google_load_jquery(http_protocol, '1.4.2') %>
   <%= google_load_jquery_ui(http_protocol, '1.8.4') %>
 <% end -%>
-<%= stylesheet_link_tag %W{ jquery/jquery.fancybox jquery/jquery.timepicker default }, :cache => true %>
+<%= stylesheet_link_tag %W{ jquery/jquery.fancybox jquery/jquery.timepicker fullcalendar default }, :cache => true %>
 <%= javascript_include_tag %w{
   jquery/jquery.form.js
   jquery/jquery.easing.js
@@ -23,8 +23,16 @@
   jquery/jquery.tips.js
   jquery/jquery.timers.js
   jquery/jquery.timepicker.min.js
+  jquery/fullcalendar.js
   muck.js
   application.js }, :cache => 'all_js_cached' %>
 <%= javascript_tag %[const AUTH_TOKEN = #{form_authenticity_token.inspect};] if protect_against_forgery? %>
 <%= csrf_meta_tag %>
 <%= yield :head -%>
+
+
+<link href="fullcalendar/fullcalendar.css" rel="stylesheet" type="text/css" media="all"/>
+
+<script type="text/javascript" src="fullcalendar/fullcalendar.js"></script>
+<script type="text/javascript" src="js/calendar-setup.js"></script>
+<script type="text/javascript" src="js/clear-form-fields.js"></script>
