--- a/app/views/broadcasts/index.html.erb
+++ b/app/views/broadcasts/index.html.erb
@@ -12,11 +12,6 @@
 
 <script type="text/javascript" language="JavaScript">
   jQuery(document).ready(function(){
-  	var date = new Date();
-  	var d = date.getDate();
-  	var m = date.getMonth();
-  	var y = date.getFullYear();
-	
   	jQuery('#calendar').fullCalendar({
   		header: {
   			left: 'prev',
@@ -28,7 +23,10 @@
           	next: '&nbsp;'
   	    },
   		editable: false,
-  		events: <%= @broadcasts.to_json(:only => [:id], :methods => [:title, :start, :end]).html_safe -%>
+  		eventClick: function(calEvent, jsEvent, view) {
+  		  location.href=calEvent.project_url;
+      },
+  		events: <%= @broadcasts.to_json(:only => [:id], :methods => [:title, :start, :end, :project_url]).html_safe -%>
   	});	
   });
 </script>
