--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -296,5 +296,5 @@ a:hover{text-decoration:none;}
 .character .text-holder .name a{color:#4B3013;text-decoration:none;}
 .character .text-holder .name a:hover{text-decoration:underline;}
 .character{margin:10px;height:100px;width:100px;float:left;}
-#character-bio{margin:10px;}
+#character-bio{margin:10px;clear:both;display:inline-block;}
 #character-bio img{float:left;display:inline-block;margin:0 10px 0 0;}
