--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,11 +1,6 @@
 <div class="result-box"> 
-	<div class="heading"> 
-		<ul class="options-list"> 
-			<li><a href="#" class="twitter">twitter</a></li> 
-			<li><a href="#" class="comments">comments</a></li> 
-			<li><a href="#" class="people">people</a></li> 
-			<li><a href="#" class="doc">doc</a></li> 
-		</ul>
+	<div class="heading">
+	  <%= render 'projects/options_list' %> 
 		<h3 class="text-sinking3"><%= link_to project.title, project %></h3>
 	</div>
 	<span class="author"><strong>Recreated by:</strong><%= project.user.display_name %></span> 
