--- a/app/views/projects/_options_list.html.erb
+++ b/app/views/projects/_options_list.html.erb
@@ -1,6 +1,6 @@
 <ul class="options-list"> 
 	<li>
-	  <%= link_to translate('general.follow'), project_broadcasts_path(@project), :class => 'twitter' %>
+	  <%= link_to translate('general.follow'), project_broadcasts_path(project), :class => 'twitter' %>
 	</li> 
 	<!--
 	<li><a href="#" class="comments">comments</a></li> 
