Added scheduling of tweets

--- a/app/views/broadcasts/new.html.erb
+++ b/app/views/broadcasts/new.html.erb
@@ -1,5 +1,13 @@
 <div id="new-broadcast" class="common-form">
   <h1>Add Broadcast</h1>
+  <div>
+    <p>The first event for this Re-enactment is:</p>
+    <div class="text-holder"> 
+      <p><strong class="name"><%= @first_item.character.name %></strong> <%= @first_item.content %></p> 
+  		<em class="date"> <%= @first_item.event_date_time.to_s(:date_and_time) %></em>
+    </div>
+    
+  </div>
   <%= muck_form_for :broadcast, :url => project_broadcasts_path(@project), :html => { :id => "new-broadcast-form", :name => 'new-broadcast-form', :class => 'broadcast-form' } do |f| -%>
   	<%= output_errors(translate('broadcasts.new_problem'), {:class => 'help-box'}, @broadcast) %>
     <%= render 'form', :f => f %>
