--- a/app/views/layouts/global/_header.html.erb
+++ b/app/views/layouts/global/_header.html.erb
@@ -1,8 +1,8 @@
 <div id="header">
-	<h1 class="logo"><a href="/">Twistory</a></h1><!-- logo --> 
+	<h1 class="logo"><a href="/">Twistory</a></h1>
 	<div class="form-holder"> 
 		<%= render :partial => 'layouts/global/login_controls' %>
 		<a href="#" class="btn-corner">Teachers corner</a> 
 	</div><!-- form holder --> 
-	<strong class="slogan">Those who forget history are doomed to re-tweet it</strong><!-- slogan --> 
-</div><!-- header -->
+	<strong class="slogan">Those who forget history are doomed to re-tweet it</strong>
+</div>
