--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -1,3 +1,4 @@
+<div class="feature-indicator" style="margin-left:391px"></div>
 <div class="feature"> 
 	<div class="feature-holder">
 	  <%= render 'projects/options_list', :project => @project %>
