--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -43,16 +43,11 @@ a:hover{text-decoration:none;}
 .time-line li{padding:39px 7px 3px 0 ;width:90px;background:url(/images/separator.gif) no-repeat 0 3px;float:left;text-align:right;color:#fff;line-height:16px;font-size:12px;}
 .time-line li:first-child{background:none;}
 .time-line .point{width:16px;height:16px;position:absolute;text-indent:-9999px;overflow:hidden;top:40px;background:url(/images/bg-point.gif) no-repeat;}
-.point1815{left:123px;}
-.point1830{left:286px;}
-.point1847{left:451px;}
-.point1872{left:701px;}
-.point1874{left:721px;}
-.point1896{left:931px;}
 .main-holder{height:1%;overflow:hidden;padding:2px 14px 0;}
 /* content start */
 #content{padding:34px 0 0 25px;width:678px;line-height:17px;float:left;}
 .feature{width:703px;margin:-34px 0 24px -25px;position:relative;padding-top:22px;background:url(/images/bg-feature-top.gif) no-repeat;}
+.feature-indicator{margin:-34px 0 24px 63px;width:59px;position:relative;padding-top:25px;z-index:1000;background:url(/images/bg-feature-top-arrow.gif) no-repeat;}
 .feature-holder{height:1%;padding:0 25px 20px;position:relative;background:url(/images/bg-feature-bottom.gif) no-repeat 0 100%;}
 #content .text-feature{width:235px;height:40px;text-indent:-9999px;overflow:hidden;margin:0 0 -3px -18px;background:url(/images/text-featured.gif) no-repeat;}
 .feature .row{height:1%;overflow:hidden;}
