--- a/app/views/users/welcome.html.erb
+++ b/app/views/users/welcome.html.erb
@@ -1,5 +1,11 @@
 <div id="welcome" class="common-content">
   <%= output_errors('', {:class => 'help-box'}) %>
-  Welcome to TwHistory
+  <p>Welcome to TwHistory, and thanks for joining.</p>
+  <p>TwHistory is currently in beta, so we are very interested in your feedback. If you run into any problems, or have questions, please <a href="http://twhistory.org/stay-in-touch/">contact us</a>.
+  <p>Now that you have created an account, there are several things you can do. You can create your own reenactment, invite others to participate, or follow reenactments already taking place.
+  To start your own TwHistory re-enactment, click on the Create a Re-enactment button on the right side of the page. Give your re-enactment a name and description. 
+  You can then either add tweets manually, or upload an excel spreadsheet with the content. To download a blank spreadsheet to use as an example, click here.</p>  
   <%= link_to translate('muck.users.view_your_account'), user_path(current_user) %>
 </div>
+
+
